<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="action_settings">Settings</string>
    <string name="incorrect_toast">INCORRECT</string>
    <string name="correct_toast">CORRECT</string>
    <string name="quiz_results">QUIZ RESULTS</string>
    <string name="next_button">Next</string>
    <string name="prev_button">PREV</string>
    <string name="question_oceans">The Pacific Ocean is larger than
the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
freshwater lake.</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="restart_button">Take Again</string>
    <string name="results_correct_answers_title">Correct Answers: </string>
    <string name="results_total_answers_title">Number of Questions: </string>
    <string name="results_time_taken_title">Time Taken: </string>
    <string name="share_button">Share</string>

</resources>
